[package]
name = "nftbay"
version = "0.1.0"
description = "NFTBAY - eBay-like NFT marketplace on Solana (Anchor)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nftbay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
