[package]
name = "nftbay"
version = "0.1.0"
description = "NFTBAY - eBay-like NFT marketplace on Solana (Anchor)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nftbay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
